--- a/CFP.App/Formularios/Financeiros/UserControlContas.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlContas.xaml
@@ -121,7 +121,7 @@
                                     FontFamily="Champagne &amp; Limousines" 
                                     FontSize="18"
                                     Foreground="#FF1F3D68" 
-                                    VerticalAlignment="Stretch"  TabIndex="1" LostFocus="cmbTipoConta_LostFocus"/>
+                                    VerticalAlignment="Stretch"  TabIndex="1"/>
 
                                 <ComboBox
                                 x:Name="cmbTipoPeriodo"
@@ -211,6 +211,7 @@
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="150"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBox
                                     x:Name="txtValorTotal"
@@ -228,15 +229,15 @@
 
                                 <Button x:Name="btGerarParcelas" 
                                     Grid.Row="4"
-                                        Grid.Column="1"
-                                    Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}"
-                                    Height="40" Width="40" 
+                                    Grid.Column="2"
+                                    Style="{StaticResource MaterialDesignRaisedAccentButton}"
+                                    Width="150" Height="50"
                                     Background="#FF1F3D68"
                                     VerticalAlignment="Stretch"
-                                    HorizontalAlignment="Right" IsEnabled="False" TabIndex="8" Click="btGerarParcelas_Click" >
+                                    HorizontalAlignment="Stretch" IsEnabled="False" TabIndex="8" Click="btGerarParcelas_Click" >
                                     <materialDesign:PackIcon 
-                                        Kind="Divide"  
-                                        Width="40" 
+                                        Kind="Money"  
+                                        Width="53" 
                                         Height="40"/>
                                 </Button>
 
@@ -250,7 +251,7 @@
                                     FontSize="18"
                                     Foreground="#FF1F3D68"
                                     VerticalAlignment="Stretch" 
-                                    Margin="10 0 45 0" IsEnabled="False" 
+                                    Margin="10 0 10 0" IsEnabled="False" 
                                     MaxLength="3" TabIndex="9" PreviewTextInput="txtQtdParcelas_PreviewTextInput" PreviewKeyDown="txtQtdParcelas_PreviewKeyDown"/>
                             </Grid>
                             <Grid x:Name="GridRow5" Grid.Row="5">
@@ -316,42 +317,29 @@
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                <Button x:Name="btPagar" 
+                                
+                                <Button x:Name="btEditar" 
                                     Grid.Row="0"
                                     Grid.Column="0"
                                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}"
                                     Height="60" Width="60" 
                                     Background="#FF1F3D68"
                                     VerticalAlignment="Center"
-                                    HorizontalAlignment="Center" BorderBrush="#FF1F3D68" Click="btPagar_Click">
+                                    HorizontalAlignment="Center" BorderBrush="#FF1F3D68" Click="btEditar_Click" >
                                     <materialDesign:PackIcon 
-                                        Kind="Payment"  
+                                        Kind="Edit"  
                                         Width="50" 
                                         Height="50"/>
                                 </Button>
-
-                                <Button x:Name="btReceber" 
+                                
+                                <Button x:Name="btCancelarParcela" 
                                     Grid.Row="0"
                                     Grid.Column="1"
                                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}"
                                     Height="60" Width="60" 
                                     Background="#FF1F3D68"
-                                    VerticalAlignment="Bottom"
-                                    HorizontalAlignment="Center" BorderBrush="#FF1F3D68" Margin="10.4,0,11.2,5.4" Click="btReceber_Click">
-                                    <materialDesign:PackIcon 
-                                        Kind="Money"  
-                                        Width="50" 
-                                        Height="50"/>
-                                </Button>
-
-                                <Button x:Name="btCancelarParcela" 
-                                    Grid.Row="0"
-                                    Grid.Column="2"
-                                    Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}"
-                                    Height="60" Width="60" 
-                                    Background="#FF1F3D68"
-                                    VerticalAlignment="Bottom"
-                                    HorizontalAlignment="Center" BorderBrush="#FF1F3D68" Margin="10.4,0,11.2,5.4" Click="btReceber_Click">
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Center" BorderBrush="#FF1F3D68" Click="btCancelarParcela_Click"  >
                                     <materialDesign:PackIcon 
                                         Kind="Remove"  
                                         Width="50" 
@@ -468,15 +456,40 @@
                                         <DataGridTextColumn Header="Situação" Binding="{Binding SituacaoParcelas}" />
                                         <DataGridTextColumn Header="Número" Binding="{Binding Numero}" />
                                         <DataGridTextColumn Header="Parcela ($)" Binding="{Binding ValorParcela, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
-                                        <DataGridTextColumn Header="Vencimento" Binding="{Binding DataVencimento, StringFormat=d,  ConverterCulture='pt-BR'}" />
-                                        <DataGridTextColumn Header="J (%)" Binding="{Binding JurosPorcentual}" />
-                                        <DataGridTextColumn Header="J ($)" Binding="{Binding JurosValor}" />
-                                        <DataGridTextColumn Header="Desc (%)" Binding="{Binding DescontoPorcentual}" />
-                                        <DataGridTextColumn Header="Desc ($)" Binding="{Binding DescontoValor}" />
-                                        <DataGridTextColumn Header="V.Reajustado" Binding="{Binding ValorReajustado}" />
-                                        <DataGridTextColumn Header="Data Pagamento" Binding="{Binding DataPagamento, StringFormat=d,  ConverterCulture='pt-BR'}" />
-                                        <DataGridTextColumn Header="V.Pago" Binding="{Binding ValorPago}" />
-                                        <DataGridComboBoxColumn x:Name="DatagridCmbFormaPagamento" Header="Pagamento" 
+                                        <DataGridTemplateColumn Header="Vencimento">
+                                            <DataGridTemplateColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Text="{Binding DataVencimento, StringFormat=d,  ConverterCulture='pt-BR'}" />
+                                                </DataTemplate>
+                                            </DataGridTemplateColumn.CellTemplate>
+                                            <DataGridTemplateColumn.CellEditingTemplate>
+                                                <DataTemplate>
+                                                    <DatePicker SelectedDate="{Binding DataVencimento, StringFormat=d,  ConverterCulture='pt-BR'}" />
+                                                </DataTemplate>
+                                            </DataGridTemplateColumn.CellEditingTemplate>
+                                        </DataGridTemplateColumn>
+                                        <!--<DataGridTextColumn Header="Vencimento" Binding="{Binding DataVencimento, StringFormat=d,  ConverterCulture='pt-BR'}" />-->
+                                        <DataGridTextColumn Header="J (%)" Binding="{Binding JurosPorcentual, StringFormat='##0.00',  ConverterCulture='pt-BR'}" />
+                                        <DataGridTextColumn Header="J ($)" Binding="{Binding JurosValor, StringFormat='##0.00',  ConverterCulture='pt-BR'}" />
+                                        <DataGridTextColumn Header="Desc (%)" Binding="{Binding DescontoPorcentual, StringFormat='##0.00',  ConverterCulture='pt-BR'}" />
+                                        <DataGridTextColumn Header="Desc ($)" Binding="{Binding DescontoValor, StringFormat='##0.00',  ConverterCulture='pt-BR'}" />
+                                        <DataGridTextColumn Header="V.Reajustado" Binding="{Binding ValorReajustado, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
+                                        <DataGridTemplateColumn Header="Pagamento">
+                                            <DataGridTemplateColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Text="{Binding DataPagamento, StringFormat=d,  ConverterCulture='pt-BR'}" />
+                                                </DataTemplate>
+                                            </DataGridTemplateColumn.CellTemplate>
+                                            <DataGridTemplateColumn.CellEditingTemplate>
+                                                <DataTemplate>
+                                                    <DatePicker SelectedDate="{Binding DataPagamento, StringFormat=d,  ConverterCulture='pt-BR'}" />
+                                                </DataTemplate>
+                                            </DataGridTemplateColumn.CellEditingTemplate>
+                                        </DataGridTemplateColumn>
+                                        <!--<DataGridTextColumn Header="Data Pagamento" Binding="{Binding DataPagamento, StringFormat=d,  ConverterCulture='pt-BR'}" />-->
+                                        <DataGridTextColumn Header="V.Pago" Binding="{Binding ValorPago, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
+                                        <DataGridTextColumn Header="V. Restante" Binding="{Binding ValorRestante, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
+                                        <DataGridComboBoxColumn x:Name="DatagridCmbFormaPagamento" Header="Forma Pagamento" 
                                                                 SelectedValueBinding="{Binding FormaPagamento, Mode=TwoWay}" 
                                                                 DisplayMemberPath="{Binding FormaPagamento}" />
                                     </DataGrid.Columns>
