--- a/CFP.App/Formularios/Financeiros/UserControlContas.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlContas.xaml
@@ -211,7 +211,7 @@
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="150"/>
+                                    <ColumnDefinition Width="50"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBox
                                     x:Name="txtValorTotal"
@@ -230,15 +230,16 @@
                                 <Button x:Name="btGerarParcelas" 
                                     Grid.Row="4"
                                     Grid.Column="2"
-                                    Style="{StaticResource MaterialDesignRaisedAccentButton}"
-                                    Width="150" Height="50"
+                                         Width="40" 
+                                        Height="40"
+                                    Style="{StaticResource MaterialDesignFloatingActionAccentButton}"
                                     Background="#FF1F3D68"
-                                    VerticalAlignment="Stretch"
+                                    VerticalAlignment="Center"
                                     HorizontalAlignment="Stretch" IsEnabled="False" TabIndex="8" Click="btGerarParcelas_Click" >
                                     <materialDesign:PackIcon 
                                         Kind="Money"  
-                                        Width="53" 
-                                        Height="40"/>
+                                        Width="30" 
+                                        Height="30"/>
                                 </Button>
 
                                 <TextBox
@@ -500,11 +501,9 @@
                     <TabItem x:Name="tabItemArquivos" Header="Arquivos">
                         
                     </TabItem>
+                    
                 </TabControl>
             </Grid>
-
-
-
         </Grid>
     </Grid>
 </UserControl>
