--- a/CFP.App/Formularios/Financeiros/UserControlContas.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlContas.xaml
@@ -164,7 +164,7 @@
                                     VerticalAlignment="Stretch"
                                     TabIndex="2"
                                     Margin="10 0 0 0"/>
-                                
+
                                 <ComboBox 
                                      x:Name="cmbFormaCompra"
                                      Grid.Column="2"
@@ -318,7 +318,7 @@
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                
+
                                 <Button x:Name="btEditar" 
                                     Grid.Row="0"
                                     Grid.Column="0"
@@ -332,7 +332,7 @@
                                         Width="50" 
                                         Height="50"/>
                                 </Button>
-                                
+
                                 <Button x:Name="btCancelarParcela" 
                                     Grid.Row="0"
                                     Grid.Column="1"
@@ -360,7 +360,7 @@
                                           VerticalAlignment="Center"
                                               HorizontalAlignment="Center">
                                     </CheckBox>
-                                    <Label x:Name="lblTotalPendentes" Content="000"
+                                    <Label x:Name="lblTotalPendentes" Content="000.000,00"
                                            Grid.Row="1"
                                            Style="{StaticResource MaterialDesignLabel}"
                                             FontFamily="Champagne &amp; Limousines" 
@@ -368,7 +368,7 @@
                                           Foreground="White"
                                           VerticalAlignment="Center"
                                            HorizontalAlignment="Center">
-                                        
+
                                     </Label>
                                 </Grid>
 
@@ -385,9 +385,9 @@
                                           Foreground="White"
                                           VerticalAlignment="Center"
                                               HorizontalAlignment="Center">
-                                        
+
                                     </CheckBox>
-                                    <Label x:Name="lblTotalPagos" Content="000"
+                                    <Label x:Name="lblTotalPagos" Content="000.000,00"
                                            Grid.Row="1"
                                            Style="{StaticResource MaterialDesignLabel}"
                                             FontFamily="Champagne &amp; Limousines" 
@@ -413,7 +413,7 @@
                                           VerticalAlignment="Center"
                                               HorizontalAlignment="Center">
                                     </CheckBox>
-                                    <Label x:Name="lblTotalParceiais" Content="000"
+                                    <Label x:Name="lblTotalParceiais" Content="000.000,00"
                                            Grid.Row="1"
                                            Style="{StaticResource MaterialDesignLabel}"
                                             FontFamily="Champagne &amp; Limousines" 
@@ -438,7 +438,7 @@
                                           VerticalAlignment="Center"
                                               HorizontalAlignment="Center">
                                     </CheckBox>
-                                    <Label x:Name="lblTotalCancelados" Content="000"
+                                    <Label x:Name="lblTotalCancelados" Content="000.000,00"
                                            Grid.Row="1"
                                            Style="{StaticResource MaterialDesignLabel}"
                                             FontFamily="Champagne &amp; Limousines" 
@@ -449,9 +449,10 @@
 
                                     </Label>
                                 </Grid>
+                             
                             </Grid>
                             <Grid x:Name="GridListaDataGrid" Grid.Row="1">
-                                <DataGrid x:Name="DataGridContaPagamento"  AutoGenerateColumns="False" VerticalScrollBarVisibility="Auto" IsEnabled="False" CellEditEnding="DataGridContaPagamento_CellEditEnding">
+                                <DataGrid x:Name="DataGridContaPagamento"  AutoGenerateColumns="False" VerticalScrollBarVisibility="Auto" IsEnabled="False" CellEditEnding="DataGridContaPagamento_CellEditEnding" IsReadOnly="True" MouseDoubleClick="DataGridContaPagamento_MouseDoubleClick">
                                     <DataGrid.Columns>
 
                                         <DataGridTextColumn Header="Situação" Binding="{Binding SituacaoParcelas}" />
@@ -499,9 +500,80 @@
 
                     </TabItem>
                     <TabItem x:Name="tabItemArquivos" Header="Arquivos">
-                        
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="80"/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="80"/>
+                                </Grid.ColumnDefinitions>
+                                <Rectangle Grid.Column="0"
+                                 Fill="WhiteSmoke"
+                                 RadiusX="10"
+                                 RadiusY="10"
+                                 StrokeDashArray="12"
+                                 StrokeThickness="2"
+                                 StrokeDashCap="Round"
+                                 Stroke="Silver"
+                                 Margin="10"
+                                 HorizontalAlignment="Stretch"
+                                 VerticalAlignment="Stretch" />
+
+                                <TextBlock Grid.Row="0" 
+                                       HorizontalAlignment="Center"
+                                       VerticalAlignment="Center"
+                                       FontFamily="Champagne &amp; Limousines" 
+                                       Text="Arraste e Solte os arquivos aqui"
+                                       FontSize="20"/>
+
+                                <Button x:Name="btBuscarArquivos"
+                                        Grid.Column="1"
+                                        Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
+                                        Height="60" Width="60" 
+                                        Background="#FF1F3D68" 
+                                        VerticalAlignment="Stretch" 
+                                        BorderBrush="#FF1F3D68" Margin="0,10,12.4,10" HorizontalAlignment="Right">
+                                    <materialDesign:PackIcon 
+                                        Kind="Upload"  
+                                        Width="50" 
+                                        Height="50"/>
+                                </Button>
+                            </Grid>
+
+                            <Grid Grid.Row="1">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+
+                                <Grid Grid.Column="0"
+                                      Margin="10">
+                                    <ItemsControl x:Name="lstArquivos">
+                                        <TextBlock
+                                             Text="Lista de Arquivos"
+                                             FontFamily="Champagne &amp; Limousines" 
+                                             FontSize="20"
+                                             FontWeight="SemiBold"/>
+                                        <StackPanel Background="Green">
+                                            <ListView  Height="270"></ListView>
+                                        </StackPanel>
+                                    </ItemsControl>
+                                </Grid>
+                                <Grid Grid.Column="1" Background="Purple" Margin="10">
+                                    <TextBlock
+                                             Text="Imagem"
+                                             FontFamily="Champagne &amp; Limousines" 
+                                             FontSize="20"
+                                             FontWeight="SemiBold"/>
+                                    <!--Imagem-->
+                                </Grid>
+                            </Grid>
+                        </Grid>
                     </TabItem>
-                    
+
                 </TabControl>
             </Grid>
         </Grid>
