--- a/CFP.App/Formularios/ModeloBase/UserControls/UserControlCadastros.xaml
+++ b/CFP.App/Formularios/ModeloBase/UserControls/UserControlCadastros.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:CFP.App.Formularios.ModeloBase.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -21,29 +22,178 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
+          
             <Button x:Name="btPessoa" 
-                Margin="5,10,5,9.8" Grid.Column="0" Grid.Row="1" Background="#FF1B3861" VerticalAlignment="Stretch" 
-                FontSize="16" Content="Pessoas" Foreground="#FFFCF9F9" Height="Auto" Click="btPessoa_Click" />
+                    Style="{StaticResource MaterialDesignFlatButton}" 
+                    Height="auto" Width="auto"
+                    Grid.Column="0" Grid.Row="1" 
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Click="btPessoa_Click"
+                    ToolTip="Cadastro de Pessoas"
+                    Margin="10 0 10 0">
+                <materialDesign:PackIcon
+                    Kind="PeopleAdd"
+                     Width="80"
+                    Height="80"
+                    Foreground="#FF1F3D68"/>
+            </Button>
+            <Label 
+                Grid.Column="0" Grid.Row="1" 
+                Content="Pessoas" 
+                Foreground="#FF1F3D68" 
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                FontFamily="Champagne &amp; Limousines" 
+                FontSize="18"/>
+
             <Button x:Name="btTipoRenda" 
-                Margin="5,10,5,9.8" Grid.Column="1" Grid.Row="1" Background="#FF1B3861" VerticalAlignment="Stretch" 
-                FontSize="16" Content="Tipos de Renda" Foreground="#FFFCF9F9" Height="Auto" Click="btTipoRenda_Click"/>
-            <Button x:Name="btTipoGasto"
-                Margin="5,10.2,5,9.6" Grid.Column="3" Grid.Row="1" Background="#FF1B3861" VerticalAlignment="Stretch" 
-                FontSize="16" Content="Tipos de Gasto" Foreground="#FFFCF9F9" Height="Auto" Click="btTipoGasto_Click" />
-            <Button x:Name="btTipoSubGasto"
-                Margin="5,10.2,5,9.6" Grid.Column="4" Grid.Row="1" Background="#FF1B3861" VerticalAlignment="Stretch" 
-                FontSize="16" Content="Tipos SubGasto" Foreground="#FFFCF9F9" Height="Auto" Click="btTipoSubGasto_Click" />
-            <Button x:Name="btFormaPagamento"
-                Margin="5,10.2,5,9.6" Grid.Column="1" Grid.Row="2" Background="#FF1B3861" VerticalAlignment="Stretch" 
-                FontSize="16" Content="Formas de Pagamento" Foreground="#FFFCF9F9" Click="btFormaPagamento_Click" Height="Auto" />
+                    Style="{StaticResource MaterialDesignFlatButton}" 
+                    Height="auto" Width="auto"
+                    Grid.Column="1" Grid.Row="1"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Click="btTipoRenda_Click"
+                    ToolTip="Cadastro de Rendas"
+                    Margin="10 0 10 0">
+                <materialDesign:PackIcon
+                    Kind="Payment"
+                      Width="80"
+                    Height="80"
+                    Foreground="#FF1F3D68"/>
+            </Button>
+            <Label 
+                Grid.Column="1" Grid.Row="1" 
+                Content="Rendas" 
+                Foreground="#FF1F3D68" 
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                FontFamily="Champagne &amp; Limousines" 
+                FontSize="18"/>
+
             <Button x:Name="btUsuario"
-                Margin="5,10,5,9.8" Grid.Column="2" Grid.Row="1" Background="#FF1B3861" VerticalAlignment="Stretch" 
-                FontSize="16" Content="Usuários" Foreground="#FFFCF9F9" Height="Auto" Click="btUsuario_Click" />
+                    Style="{StaticResource MaterialDesignFlatButton}" 
+                    Height="auto" Width="auto"
+                    Grid.Column="2" Grid.Row="1" 
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Click="btUsuario_Click"
+                    ToolTip="Cadastro de Usuários"
+                     Margin="10 0 10 0">
+                <materialDesign:PackIcon
+                    Kind="UserAdd"
+                    Width="70"
+                    Height="80"
+                    Foreground="#FF1F3D68"/>
+            </Button>
+            <Label 
+                Grid.Column="2" Grid.Row="1" 
+                Content="Usuários" 
+                Foreground="#FF1F3D68" 
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                FontFamily="Champagne &amp; Limousines" 
+                FontSize="18"/>
+
+            <Button x:Name="btTipoGasto"
+                 Style="{StaticResource MaterialDesignFlatButton}" 
+                    Height="auto" Width="auto"
+                    Grid.Column="3" Grid.Row="1" 
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                     Click="btTipoGasto_Click"
+                     ToolTip="Cadastro de Gastos"
+                     Margin="10 0 10 0">
+                <materialDesign:PackIcon
+                    Kind="Group"
+                    Width="70"
+                    Height="80"
+                    Foreground="#FF1F3D68"/>
+            </Button>
+            <Label 
+                Grid.Column="3" Grid.Row="1" 
+                Content="Gastos" 
+                Foreground="#FF1F3D68" 
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                FontFamily="Champagne &amp; Limousines" 
+                FontSize="18"/>
+
+            <Button x:Name="btTipoSubGasto"
+               Style="{StaticResource MaterialDesignFlatButton}" 
+                    Height="auto" Width="auto"
+                    Grid.Column="4" Grid.Row="1" 
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Click="btTipoSubGasto_Click" 
+                    ToolTip="Cadastro de SubGastos"
+                    Margin="10 0 10 0">
+                <materialDesign:PackIcon
+                    Kind="Group"
+                    Width="70"
+                    Height="80"
+                    Foreground="#FF1F3D68"/>
+            </Button>
+            <Label 
+                Grid.Column="4" Grid.Row="1" 
+                Content="SubGastos" 
+                Foreground="#FF1F3D68" 
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                FontFamily="Champagne &amp; Limousines" 
+                FontSize="18"/>
+
+            <Button x:Name="btFormaPagamento"
+                    Style="{StaticResource MaterialDesignFlatButton}" 
+                    Height="auto" Width="auto"
+                    Grid.Column="5" Grid.Row="1" 
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Click="btFormaPagamento_Click"
+                     ToolTip="Cadastro de Formas de Pagamento"
+                    Margin="10 0 10 0">
+                <materialDesign:PackIcon
+                    Kind="CurrencyUsd"
+                    Width="70"
+                    Height="80"
+                    Foreground="#FF1F3D68"/>
+            </Button>
+            <Label 
+                Grid.Column="5" Grid.Row="1" 
+                Content="F. Pagamentos" 
+                Foreground="#FF1F3D68" 
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                FontFamily="Champagne &amp; Limousines" 
+                FontSize="18"/>
+
             <Button x:Name="btBanco"
-                Margin="5,10,5,9.8" Grid.Column="0" Grid.Row="2" Background="#FF1B3861" VerticalAlignment="Stretch" 
-                FontSize="16" Content="Bancos" Foreground="#FFFCF9F9" Height="Auto" Click="btBanco_Click"  />
+                Style="{StaticResource MaterialDesignFlatButton}" 
+                    Height="auto" Width="auto"
+                    Grid.Column="6" Grid.Row="1" 
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                 Click="btBanco_Click"  
+                     ToolTip="Cadastro de Bancos"
+                    Margin="10 0 10 0">
+                <materialDesign:PackIcon
+                    Kind="Bank"
+                    Width="70"
+                    Height="80"
+                    Foreground="#FF1F3D68"/>
+            </Button>
+            <Label 
+                Grid.Column="6" Grid.Row="1" 
+                Content="Bancos" 
+                Foreground="#FF1F3D68" 
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                FontFamily="Champagne &amp; Limousines" 
+                FontSize="18"/>
         </Grid>
         <StackPanel x:Name="panelCadastros" Width="auto" Height="auto" Grid.RowSpan="2"/>
     </Grid>
