--- a/CFP.App/Formularios/ModeloBase/UserControls/UserControlFinanceiros.xaml
+++ b/CFP.App/Formularios/ModeloBase/UserControls/UserControlFinanceiros.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:CFP.App.Formularios.ModeloBase.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -13,25 +14,108 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Button x:Name="btCaixa"
-                Margin="5" Grid.Column="0" Grid.Row="1" Background="#FF1B3861" VerticalAlignment="Stretch" 
-                FontSize="16" Content="Caixa" Foreground="#FFFCF9F9" Height="auto" />
-        <Button x:Name="btCofre"
-                Margin="5" Grid.Column="1" Grid.Row="1" Background="#FF1B3861" VerticalAlignment="Stretch" 
-                FontSize="16" Content="Cofre" Foreground="#FFFCF9F9"  Height="auto" />
-        <Button x:Name="BtConta"
-                Margin="5" Grid.Column="2" Grid.Row="1" Background="#FF1B3861" VerticalAlignment="Stretch" 
-                FontSize="16" Content="Contas" Foreground="#FFFCF9F9"  Height="auto" Click="BtConta_Click"/>
-        <Button x:Name="btHorasTrabalho"
-                Margin="5" Grid.Column="3" Grid.Row="1" Background="#FF1B3861" VerticalAlignment="Stretch" 
-                FontSize="16" Content="Horas de Trabalho" Foreground="#FFFCF9F9"  Height="auto" />
+            <Button x:Name="btCaixa"
+                Style="{StaticResource MaterialDesignFlatButton}" 
+                    Height="auto" Width="auto"
+                    Grid.Column="1" Grid.Row="1" 
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch" 
+                    ToolTip="Cadastro de Bancos"
+                    Margin="10 0 10 0">
+                <materialDesign:PackIcon
+                    Kind="CashRegister"
+                    Width="70"
+                    Height="80"
+                    Foreground="#FF1F3D68"/>
+            </Button>
+            <Label 
+                Grid.Column="1" Grid.Row="1" 
+                Content="Caixa" 
+                Foreground="#FF1F3D68" 
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                FontFamily="Champagne &amp; Limousines" 
+                FontSize="18"/>
+
+            <Button x:Name="btCofre"
+                 Style="{StaticResource MaterialDesignFlatButton}" 
+                    Height="auto" Width="auto"
+                    Grid.Column="2" Grid.Row="1" 
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch" 
+                    ToolTip="Cadastro de Bancos"
+                    Margin="10 0 10 0">
+                <materialDesign:PackIcon
+                    Kind="SafeSquare"
+                    Width="70"
+                    Height="80"
+                    Foreground="#FF1F3D68"/>
+                
+            </Button>
+            <Label 
+                Grid.Column="2" Grid.Row="1" 
+                Content="Cofre" 
+                Foreground="#FF1F3D68" 
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                FontFamily="Champagne &amp; Limousines" 
+                FontSize="18"/>
+
+            <Button x:Name="BtConta"
+                 Style="{StaticResource MaterialDesignFlatButton}" 
+                    Height="auto" Width="auto"
+                    Grid.Column="3" Grid.Row="1" 
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch" 
+                    ToolTip="Cadastro de Bancos"
+                    Margin="10 0 10 0"
+                    Click="BtConta_Click">
+                <materialDesign:PackIcon
+                    Kind="AccountCash"
+                    Width="70"
+                    Height="80"
+                    Foreground="#FF1F3D68"/>
+            </Button>
+            <Label 
+                Grid.Column="3" Grid.Row="1" 
+                Content="Contas" 
+                Foreground="#FF1F3D68" 
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                FontFamily="Champagne &amp; Limousines" 
+                FontSize="18"/>
+            
+            <Button x:Name="btHorasTrabalho"
+                 Style="{StaticResource MaterialDesignFlatButton}" 
+                    Height="auto" Width="auto"
+                    Grid.Column="4" Grid.Row="1" 
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch" 
+                    ToolTip="Cadastro de Bancos"
+                    Margin="10 0 10 0">
+                <materialDesign:PackIcon
+                    Kind="PointOfSale"
+                    Width="70"
+                    Height="80"
+                    Foreground="#FF1F3D68"/>
+            </Button>
+            <Label 
+                Grid.Column="4" Grid.Row="1" 
+                Content="Hora Extra" 
+                Foreground="#FF1F3D68" 
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                FontFamily="Champagne &amp; Limousines" 
+                FontSize="18"/>
         </Grid>
         <StackPanel x:Name="panelCadastros" Width="auto" Height="auto" Grid.RowSpan="2"/>
     </Grid>
